# laiers-frontend

./: .cursorignore  .cursorrules  .dockerignore  .env.example  .firebaserc  .gitignore  AGENT_ARCHITECTURE_IMPLEMENTATION.md  DEMO_GUIDE.md  Dockerfile  README.md  apphosting.yaml  claude.md  cursor.md  firebase.json  gemini.md  main.py  main_old.py  package.json  pyproject.toml  run.py  simplified_tech_spec.md
assessment_agent/: __init__.py  agent.py
deployment/: README.md  deploy.sh  quick-deploy.sh
docs/: blueprint.md
job_matching_agent/: __init__.py  agent.py  assessment_agent.py  job_posting_agent.py
job_posting_agent/: agent.py
src/ai/: dev.ts
src/ai/flows/: analyze-survey-responses.ts  create-skills-survey.ts  generate-job-listing.ts  summarize-survey-responses.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/create-job/: page.tsx
src/components/: ClientOnly.tsx  FormattedDate.tsx  SkillIcon.tsx
src/components/layout/: AppHeader.tsx
src/lib/: store.ts  types.ts
src/lib/firebase/: config.ts  firestoreService.ts
static/css/: company.css  create-opportunity.css  opportunities.css  opportunity-detail.css  styles.css
templates/: base.html  company.html  create_opportunity.html  dashboard.html  landing.html  login.html  opportunities_list.html  opportunity_detail.html  register.html  test_company_flow.html
templates/components/: chat.html  chat_error.html  chat_message.html  error.html  forms.html  header.html  messages.html  opportunity_card.html  survey_form.html
utils/: __init__.py  agent.py  firestore.py  middleware.py  secrets.py
(+3 files in other folders)
