[project]
name = "laiers"
version = "0.1.0"
description = "Job matching MVP with AI agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "python-fasthtml",
    "google-adk",
    "google-cloud-firestore", 
    "firebase-admin",
    "pydantic[email]",
    "python-dotenv",
    "uvicorn[standard]",
    "python-multipart"
]

[dependency-groups]
dev = [
    "black",
    "pytest",
    "ruff"
]
