[project]
name = "laiers"
version = "0.1.0"
description = "Job matching MVP with AI agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "jinja2",
    "python-multipart",
    "httpx",
    "google-adk",
    "google-cloud-firestore",
    "firebase-admin",
    "pydantic[email]",
    "python-dotenv",
    "uvicorn[standard]",
    "google-cloud-secret-manager>=2.24.0",
]

[dependency-groups]
dev = [
    "black",
    "pytest",
    "ruff"
]
